email-service/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: email-service
  namespace: pharmtrack
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: email-service.pharmtrack.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: email-service
                port:
                  number: 8003
